--- a/index_style.css
+++ b/index_style.css
@@ -277,7 +277,7 @@ body::before {
 /* PWA Install */
 .royal-install-btn {
     background: linear-gradient(135deg, #000046, #1cb5e0);
-    color: #ffd700;
+    color: #7A5D28;
     border: 2px solid #897148;
     padding: 8px 15px;
     font-weight: bold;
